Added HTML support for all text content